@startuml
class com.example.space.models.User {
- Long id
- String sub
- String username
- boolean active
- String firstName
- String email
- String activationCode
- AuthenticationProvider authenticationProvider
- List<Post> posts
- String filename
- Set<Role> roles
+ boolean isAccountNonExpired()
+ boolean isAccountNonLocked()
+ boolean isCredentialsNonExpired()
+ boolean isEnabled()
+ Collection<? extends GrantedAuthority> getAuthorities()
}
class com.example.space.models.Article {
- Long id
- String url
- String text
}
class com.example.space.models.Parsing {
- ParsingService parsingService
+ void parseArticle()
}
class com.example.space.models.CustomOAuth2User {
- OAuth2User oAuth2User
+ Map<String,Object> getAttributes()
+ Collection<? extends GrantedAuthority> getAuthorities()
+ String getName()
+ String getEmail()
+ String getFullName()
+ String getFamilyName()
+ String getGivenName()
}
class com.example.space.models.Post {
- Long id
- String title
- String anons
- String fullText
- String date
- User user
- String filename
+ String getFilename()
+ void setFilename(String)
+ User getUser()
+ void setUser(User)
+ String getDate()
+ void setDate()
+ Long getId()
+ void setId(Long)
+ String getTitle()
+ void setTitle(String)
+ String getAnons()
+ void setAnons(String)
+ String getFullText()
+ void setFullText(String)
}


org.springframework.security.core.userdetails.UserDetails <|.. com.example.space.models.User
org.springframework.security.oauth2.core.user.OAuth2User <|.. com.example.space.models.CustomOAuth2User
@enduml